--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>jaber2024@gmail.com  |  631-992-4128  |  Deer Park, NY</p>
                 <p>
                 <a href=" https://ali332147.github.io/final_site/" target="_blank"> Live Link </a> | 
-                <span><a href="https://github.com/Ali332147?tab=repositories" target="_blank"> Github Link</a></span> |
+                <span><a href="https://githb.com/Ali3347?tab=repositories" target="_blank"> Github Link</a></span> |
                 <span><a href="JABER_ALI_RESUME.docx" target="_blank">Word Resume </a></span> 
                 </p>
                 
